ecmascript/parser/tests/typescript-errors/tsc/es6/templates/templateStringUnterminated4/input.ts.stderr
error: Unterminated template
 --> $DIR/tests/typescript-errors/tsc/es6/templates/templateStringUnterminated4/input.ts:2:1
  |
2 | `\\\`
  | ^^^^^

